fixing overflow

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -72,7 +72,6 @@
   position: absolute;
   background-color: #000;
   opacity: 0.5;
-  width: 100%;
   height: 100%;
 }
 
